cmake_project/classes/PythonParser.cpp

// Generated from ./PythonParser.g4 by ANTLR 4.13.2


#include "PythonParserVisitor.h"

#include "PythonParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PythonParserStaticData final {
  PythonParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PythonParserStaticData(const PythonParserStaticData&) = delete;
  PythonParserStaticData(PythonParserStaticData&&) = delete;
  PythonParserStaticData& operator=(const PythonParserStaticData&) = delete;
  PythonParserStaticData& operator=(PythonParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pythonparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PythonParserStaticData> pythonparserParserStaticData = nullptr;

void pythonparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pythonparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(pythonparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PythonParserStaticData>(
    std::vector<std::string>{
      "file", "statements", "statement", "simple_stmt", "compound_stmt", 
      "assignment", "augassign", "return_stmt", "raise_stmt", "pass_stmt", 
      "del_stmt", "break_stmt", "continue_stmt", "global_stmt", "nonlocal_stmt", 
      "function_def", "lambdef", "if_stmt", "elif_stmt", "else_block", "for_stmt", 
      "while_stmt", "class_def", "try_stmt", "except_block", "finally_block", 
      "match_stmt", "subject_expr", "case_block", "pattern", "block", "function_params", 
      "expressions", "expression", "assignment_expression", "named_expression", 
      "disjunction", "conjunction", "inversion", "comparison", "comp_op", 
      "comp_eq", "comp_noteq", "comp_lte", "comp_lt", "comp_gte", "comp_gt", 
      "comp_notin", "comp_in", "sum", "term", "factor", "power", "primary", 
      "slices", "slice", "atom", "group", "arguments", "arg_expression", 
      "kwargs", "starred_expression", "kwarg_or_starred", "kwarg_or_double_starred", 
      "as_targets", "as_target_list", "as_target_tuple", "as_target", "as_atom", 
      "single_target", "single_subscript_attribute_target", "t_primary", 
      "targets", "target", "del_targets", "del_target", "strings", "list", 
      "tuple", "set", "dict", "double_starred_kvpairs", "double_starred_kvpair", 
      "kvpair", "for_if_clauses", "for_if_clause", "listcomp", "setcomp", 
      "dictcomp"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'='", "'return'", "'raise'", "'pass'", "'del'", 
      "'break'", "'continue'", "'global'", "'nonlocal'", "','", "'def'", 
      "'('", "')'", "'['", "']'", "'{'", "'}'", "'lambda'", "':'", "'if'", 
      "'elif'", "'else'", "'for'", "'in'", "'while'", "'class'", "'try'", 
      "'except'", "'finally'", "'match'", "'case'", "'as'", "'_'", "'.'", 
      "':='", "'or'", "'and'", "'not'", "'+'", "'-'", "'*'", "'/'", "'=='", 
      "'!='", "'<'", "'>'", "'<='", "'>='", "'//'", "'%'", "'**'", "'True'", 
      "'False'", "'None'", "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", 
      "'//='"
    },
    std::vector<std::string>{
      "", "DEDENT", "INDENT", "ENDMARKER", "NEWLINE", "EQUALS", "RETURN", 
      "RAISE", "PASS", "DEL", "BREAK", "CONTINUE", "GLOBAL", "NONLOCAL", 
      "COMMA", "DEF", "PAR_LEFT", "PAR_RIGHT", "BRACKET_LEFT", "BRACKET_RIGHT", 
      "BRACE_LEFT", "BRACE_RIGHT", "LAMBDA", "COLON", "IF", "ELIF", "ELSE", 
      "FOR", "IN", "WHILE", "CLASS", "TRY", "EXCEPT", "FINALLY", "MATCH", 
      "CASE", "AS", "UNDERSCORE", "DOT", "WALRUS", "OR", "AND", "NOT", "PLUS", 
      "MINUS", "STAR", "SLASH", "EQEQUAL", "NOTEQUAL", "LESS", "GREATER", 
      "LESSEQUAL", "GREATEREQUAL", "DOUBLESLASH", "PERCENT", "DOUBLESTAR", 
      "TRUE", "FALSE", "NONE", "PLUSEQUAL", "MINUSEQUAL", "STAREQUAL", "SLASHEQUAL", 
      "PERCENTEQUAL", "DOUBLESTAREQUAL", "DOUBLESLASHEQUAL", "NAME", "NUMBER", 
      "STRING", "WHITESPACESKIP"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pythonparserParserStaticData = std::move(staticData);
}

}

PythonParser::PythonParser(TokenStream *input) : PythonParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PythonParser::PythonParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PythonParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pythonparserParserStaticData->atn, pythonparserParserStaticData->decisionToDFA, pythonparserParserStaticData->sharedContextCache, options);
}

PythonParser::~PythonParser() {
  delete _interpreter;
}

const atn::ATN& PythonParser::getATN() const {
  return *pythonparserParserStaticData->atn;
}

std::string PythonParser::getGrammarFileName() const {
  return "PythonParser.g4";
}

const std::vector<std::string>& PythonParser::getRuleNames() const {
  return pythonparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& PythonParser::getVocabulary() const {
  return pythonparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PythonParser::getSerializedATN() const {
  return pythonparserParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

PythonParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonParser::FileContext::ENDMARKER() {
  return getToken(PythonParser::ENDMARKER, 0);
}

std::vector<tree::TerminalNode *> PythonParser::FileContext::NEWLINE() {
  return getTokens(PythonParser::NEWLINE);
}

tree::TerminalNode* PythonParser::FileContext::NEWLINE(size_t i) {
  return getToken(PythonParser::NEWLINE, i);
}

PythonParser::StatementsContext* PythonParser::FileContext::statements() {
  return getRuleContext<PythonParser::StatementsContext>(0);
}


size_t PythonParser::FileContext::getRuleIndex() const {
  return PythonParser::RuleFile;
}


std::any PythonParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

PythonParser::FileContext* PythonParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, PythonParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(181);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PythonParser::NEWLINE) {
      setState(178);
      match(PythonParser::NEWLINE);
      setState(183);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(185);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 6) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 6)) & 8078332312961767167) != 0)) {
      setState(184);
      statements();
    }
    setState(187);
    match(PythonParser::ENDMARKER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

PythonParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PythonParser::StatementContext *> PythonParser::StatementsContext::statement() {
  return getRuleContexts<PythonParser::StatementContext>();
}

PythonParser::StatementContext* PythonParser::StatementsContext::statement(size_t i) {
  return getRuleContext<PythonParser::StatementContext>(i);
}


size_t PythonParser::StatementsContext::getRuleIndex() const {
  return PythonParser::RuleStatements;
}


std::any PythonParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

PythonParser::StatementsContext* PythonParser::statements() {
  StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, PythonParser::RuleStatements);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(190); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(189);
      statement();
      setState(192); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 6) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 6)) & 8078332312961767167) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

PythonParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PythonParser::Compound_stmtContext* PythonParser::StatementContext::compound_stmt() {
  return getRuleContext<PythonParser::Compound_stmtContext>(0);
}

PythonParser::Simple_stmtContext* PythonParser::StatementContext::simple_stmt() {
  return getRuleContext<PythonParser::Simple_stmtContext>(0);
}


size_t PythonParser::StatementContext::getRuleIndex() const {
  return PythonParser::RuleStatement;
}


std::any PythonParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

PythonParser::StatementContext* PythonParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, PythonParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(196);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonParser::DEF:
      case PythonParser::IF:
      case PythonParser::FOR:
      case PythonParser::WHILE:
      case PythonParser::CLASS:
      case PythonParser::TRY:
      case PythonParser::MATCH: {
        enterOuterAlt(_localctx, 1);
        setState(194);
        compound_stmt();
        break;
      }

      case PythonParser::RETURN:
      case PythonParser::RAISE:
      case PythonParser::PASS:
      case PythonParser::DEL:
      case PythonParser::BREAK:
      case PythonParser::CONTINUE:
      case PythonParser::GLOBAL:
      case PythonParser::NONLOCAL:
      case PythonParser::PAR_LEFT:
      case PythonParser::BRACKET_LEFT:
      case PythonParser::BRACE_LEFT:
      case PythonParser::LAMBDA:
      case PythonParser::NOT:
      case PythonParser::PLUS:
      case PythonParser::MINUS:
      case PythonParser::TRUE:
      case PythonParser::FALSE:
      case PythonParser::NONE:
      case PythonParser::NAME:
      case PythonParser::NUMBER:
      case PythonParser::STRING: {
        enterOuterAlt(_localctx, 2);
        setState(195);
        simple_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Simple_stmtContext ------------------------------------------------------------------

PythonParser::Simple_stmtContext::Simple_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonParser::Simple_stmtContext::NEWLINE() {
  return getToken(PythonParser::NEWLINE, 0);
}

PythonParser::AssignmentContext* PythonParser::Simple_stmtContext::assignment() {
  return getRuleContext<PythonParser::AssignmentContext>(0);
}

PythonParser::ExpressionsContext* PythonParser::Simple_stmtContext::expressions() {
  return getRuleContext<PythonParser::ExpressionsContext>(0);
}

PythonParser::Return_stmtContext* PythonParser::Simple_stmtContext::return_stmt() {
  return getRuleContext<PythonParser::Return_stmtContext>(0);
}

PythonParser::Raise_stmtContext* PythonParser::Simple_stmtContext::raise_stmt() {
  return getRuleContext<PythonParser::Raise_stmtContext>(0);
}

PythonParser::Pass_stmtContext* PythonParser::Simple_stmtContext::pass_stmt() {
  return getRuleContext<PythonParser::Pass_stmtContext>(0);
}

PythonParser::Del_stmtContext* PythonParser::Simple_stmtContext::del_stmt() {
  return getRuleContext<PythonParser::Del_stmtContext>(0);
}

PythonParser::Break_stmtContext* PythonParser::Simple_stmtContext::break_stmt() {
  return getRuleContext<PythonParser::Break_stmtContext>(0);
}

PythonParser::Continue_stmtContext* PythonParser::Simple_stmtContext::continue_stmt() {
  return getRuleContext<PythonParser::Continue_stmtContext>(0);
}

PythonParser::Global_stmtContext* PythonParser::Simple_stmtContext::global_stmt() {
  return getRuleContext<PythonParser::Global_stmtContext>(0);
}

PythonParser::Nonlocal_stmtContext* PythonParser::Simple_stmtContext::nonlocal_stmt() {
  return getRuleContext<PythonParser::Nonlocal_stmtContext>(0);
}


size_t PythonParser::Simple_stmtContext::getRuleIndex() const {
  return PythonParser::RuleSimple_stmt;
}


std::any PythonParser::Simple_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitSimple_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonParser::Simple_stmtContext* PythonParser::simple_stmt() {
  Simple_stmtContext *_localctx = _tracker.createInstance<Simple_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, PythonParser::RuleSimple_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(208);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(198);
      assignment();
      break;
    }

    case 2: {
      setState(199);
      expressions();
      break;
    }

    case 3: {
      setState(200);
      return_stmt();
      break;
    }

    case 4: {
      setState(201);
      raise_stmt();
      break;
    }

    case 5: {
      setState(202);
      pass_stmt();
      break;
    }

    case 6: {
      setState(203);
      del_stmt();
      break;
    }

    case 7: {
      setState(204);
      break_stmt();
      break;
    }

    case 8: {
      setState(205);
      continue_stmt();
      break;
    }

    case 9: {
      setState(206);
      global_stmt();
      break;
    }

    case 10: {
      setState(207);
      nonlocal_stmt();
      break;
    }

    default:
      break;
    }
    setState(210);
    match(PythonParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_stmtContext ------------------------------------------------------------------

PythonParser::Compound_stmtContext::Compound_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PythonParser::Function_defContext* PythonParser::Compound_stmtContext::function_def() {
  return getRuleContext<PythonParser::Function_defContext>(0);
}

PythonParser::If_stmtContext* PythonParser::Compound_stmtContext::if_stmt() {
  return getRuleContext<PythonParser::If_stmtContext>(0);
}

PythonParser::Class_defContext* PythonParser::Compound_stmtContext::class_def() {
  return getRuleContext<PythonParser::Class_defContext>(0);
}

PythonParser::For_stmtContext* PythonParser::Compound_stmtContext::for_stmt() {
  return getRuleContext<PythonParser::For_stmtContext>(0);
}

PythonParser::Try_stmtContext* PythonParser::Compound_stmtContext::try_stmt() {
  return getRuleContext<PythonParser::Try_stmtContext>(0);
}

PythonParser::While_stmtContext* PythonParser::Compound_stmtContext::while_stmt() {
  return getRuleContext<PythonParser::While_stmtContext>(0);
}

PythonParser::Match_stmtContext* PythonParser::Compound_stmtContext::match_stmt() {
  return getRuleContext<PythonParser::Match_stmtContext>(0);
}


size_t PythonParser::Compound_stmtContext::getRuleIndex() const {
  return PythonParser::RuleCompound_stmt;
}


std::any PythonParser::Compound_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitCompound_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonParser::Compound_stmtContext* PythonParser::compound_stmt() {
  Compound_stmtContext *_localctx = _tracker.createInstance<Compound_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, PythonParser::RuleCompound_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(219);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonParser::DEF: {
        enterOuterAlt(_localctx, 1);
        setState(212);
        function_def();
        break;
      }

      case PythonParser::IF: {
        enterOuterAlt(_localctx, 2);
        setState(213);
        if_stmt();
        break;
      }

      case PythonParser::CLASS: {
        enterOuterAlt(_localctx, 3);
        setState(214);
        class_def();
        break;
      }

      case PythonParser::FOR: {
        enterOuterAlt(_localctx, 4);
        setState(215);
        for_stmt();
        break;
      }

      case PythonParser::TRY: {
        enterOuterAlt(_localctx, 5);
        setState(216);
        try_stmt();
        break;
      }

      case PythonParser::WHILE: {
        enterOuterAlt(_localctx, 6);
        setState(217);
        while_stmt();
        break;
      }

      case PythonParser::MATCH: {
        enterOuterAlt(_localctx, 7);
        setState(218);
        match_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

PythonParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PythonParser::AssignmentContext::getRuleIndex() const {
  return PythonParser::RuleAssignment;
}

void PythonParser::AssignmentContext::copyFrom(AssignmentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Simple_assignmentContext ------------------------------------------------------------------

PythonParser::ExpressionsContext* PythonParser::Simple_assignmentContext::expressions() {
  return getRuleContext<PythonParser::ExpressionsContext>(0);
}

std::vector<PythonParser::As_targetsContext *> PythonParser::Simple_assignmentContext::as_targets() {
  return getRuleContexts<PythonParser::As_targetsContext>();
}

PythonParser::As_targetsContext* PythonParser::Simple_assignmentContext::as_targets(size_t i) {
  return getRuleContext<PythonParser::As_targetsContext>(i);
}

std::vector<tree::TerminalNode *> PythonParser::Simple_assignmentContext::EQUALS() {
  return getTokens(PythonParser::EQUALS);
}

tree::TerminalNode* PythonParser::Simple_assignmentContext::EQUALS(size_t i) {
  return getToken(PythonParser::EQUALS, i);
}

PythonParser::Simple_assignmentContext::Simple_assignmentContext(AssignmentContext *ctx) { copyFrom(ctx); }


std::any PythonParser::Simple_assignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitSimple_assignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aug_assignmentContext ------------------------------------------------------------------

PythonParser::Single_targetContext* PythonParser::Aug_assignmentContext::single_target() {
  return getRuleContext<PythonParser::Single_targetContext>(0);
}

PythonParser::AugassignContext* PythonParser::Aug_assignmentContext::augassign() {
  return getRuleContext<PythonParser::AugassignContext>(0);
}

PythonParser::ExpressionsContext* PythonParser::Aug_assignmentContext::expressions() {
  return getRuleContext<PythonParser::ExpressionsContext>(0);
}

PythonParser::Aug_assignmentContext::Aug_assignmentContext(AssignmentContext *ctx) { copyFrom(ctx); }


std::any PythonParser::Aug_assignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonParserVisitor*>(visitor))
    return parserVisitor->visitAug_assignment(this);
  else
    return visitor->visitChildren(this);
}
PythonParser::AssignmentContext* PythonParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 10, PythonParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(234);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<PythonParser::Simple_assignmentContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(224); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(221);
                as_targets();
                setState(222);
                match(PythonParser::EQUALS);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(226); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(228);
      expressions();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<PythonParser::Aug_assignmentContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(230);
      single_target();
      setState(231);
      augassign();
      setState(232);
      expressions();
      break;
    }
